# griptape-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  rebuild-db.yml
scripts/: build_db.py  scrape_common.py  scrape_framework.py  scrape_nodes.py  scrape_nodes_github.py  validate_db.py
src/griptape_mcp/: __init__.py  __main__.py  db.py  server.py
