[project]
name = "griptape-mcp"
version = "0.1.1"
description = "MCP server providing Griptape Framework & Nodes documentation to LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kian"}]
keywords = ["mcp", "model-context-protocol", "griptape", "llm", "documentation", "ai", "claude"]
dependencies = [
    "mcp>=1.8.0,<3",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/KianSalem/griptape-mcp"
Repository = "https://github.com/KianSalem/griptape-mcp"
"Bug Tracker" = "https://github.com/KianSalem/griptape-mcp/issues"

[project.scripts]
griptape-mcp = "griptape_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "httpx[http2]>=0.28.0,<1",
    "beautifulsoup4>=4.12.0,<5",
    "lxml>=5.0.0,<6",
    "defusedxml>=0.7.1,<1",
    "pytest>=7.0,<9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
griptape_mcp = ["data/*.db"]
